<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="time">6.30</string>
    <string name="time_metrics">am</string>
    <string name="Repeat">Repeat</string>

    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>

    <string name="alarm_ringTone">Default ringtone</string>
    <string name="alarm_vibrate">vibrate</string>
    <string name="label">Label</string>


</resources>
